...
            "state": "translated",
            "value": "嘗試重新連線至此對等端"
          }
        }
      }
    },
    "Back to Discovery": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Back to Discovery"
...
            "state": "translated",
            "value": "無法解密來自 %@ 的訊息"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "確認此 PIN 與另一裝置相符"
          }
        }
      }
    },
    "Connect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connect"
...
            "state": "translated",
            "value": "請連接相同的 WiFi 網路以傳輸檔案"
          }
        }
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connected"
...
            "state": "translated",
            "value": "連線次數"
          }
        }
      }
    },
    "Connection Error": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connection Error"
...
            "state": "translated",
            "value": "已停用的功能將自動拒絕收到的請求。"
          }
        }
      }
    },
    "Disconnect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Disconnect"
...
            "state": "translated",
            "value": "開始使用"
          }
        }
      }
    },
    "Go offline": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go offline"
...
            "state": "translated",
            "value": "離線"
          }
        }
      }
    },
    "Go online": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Go online"
...
            "state": "translated",
            "value": "管理 Tailnet 節點"
          }
        }
      }
    },
    "Manual Connect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Manual Connect"
...
            "state": "translated",
            "value": "名稱"
          }
        }
      }
    },
    "Nearby": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Nearby"
...
            "state": "translated",
            "value": "個人照片"
          }
        }
      }
    },
    "Quick Connect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Quick Connect"
...
            "state": "translated",
            "value": "已接收"
          }
        }
      }
    },
    "Reconnect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Reconnect"
...
            "state": "translated",
            "value": "文字預覽"
          }
        }
      }
    },
    "The peer declined your connection request.": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "The peer declined your connection request."
...
